# Smallstep_mobile_manipulator

./: README.md
benchmark/: 220504_물품리스트.xlsx  Mobile_manipulator_product_list.xlsx
ssmm_bringup/: CMakeLists.txt  README.md  package.xml
ssmm_bringup/config/: diff_controllers.yaml  diff_drive_controller.yaml  manipulator_controller.yaml  ssmm_robot_controller.yaml
ssmm_bringup/launch/: rviz2.launch.py  ssmm_robot.launch.py  ssmm_state_publisher.launch.py
ssmm_core/: CHANGELOS.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
ssmm_core/src/: pub_test.cpp  sub_test.cpp
ssmm_core/ssmm_core/: helloworld_publisher.py  helloworld_subscriber.py
ssmm_description/: CMakeLists.txt  package.xml
ssmm_description/meshes/: base_link.STL  left_wheel.STL  lidar.STL  right_wheel.STL
ssmm_description/meshes/old_mesh/: gripper_base.STL  left_wheel.STL  right_wheel.STL
ssmm_description/urdf/: ssmm_gazebo.urdf
ssmm_gazebo/: CMakeLists.txt  package.xml
ssmm_gazebo/config/: joint_names_ssmm.yaml
ssmm_gazebo/launch/: display.launch.py  rviz.launch.py  test_urdf.py  world.launch.py
ssmm_gazebo/meshes/old_mesh/: arm_link.STL  arm_slider.STL  base_link.STL  camera_link1.STL  camera_link2.STL  ee_rotation.STL
ssmm_gazebo/rviz/: urdf.rviz
ssmm_gazebo/urdf/: 3dof.urdf  ssmm.urdf  ssmm_gazebo.csv  ssmm_gazebo.gazebo  ssmm_gazebo.urdf  ssmm_gazebo.urdf.xacro  ssmm_gazebo.urdf.xml  ssmm_gazebo_ori.urdf  ssmm_mobile.csv
ssmm_mobile/: CMakeLists.txt  package.xml
ssmm_mobile/config/: joint_names_ssmm_mobile.yaml
ssmm_mobile/launch/: display.launch  gazebo.launch
ssmm_mobile/meshes/: base_link.STL  left_wheel.STL  lidar.STL  right_wheel.STL
ssmm_mobile/urdf/: ssmm_mobile.urdf
ssmm_robot/: CMakeLists.txt  README.md  package.xml
ssmm_robot/config/: joint_names_ssmm_robot.yaml  joints.yaml  ssmm_robot.yaml
ssmm_robot/launch/: display.launch  display.launch.py  gazebo.launch
ssmm_robot/meshes/: base_link.STL  cam.STL  cam_bracket.STL  cam_link1.STL  cam_link2.STL  caster.STL  left_finger.STL  left_wheel.STL  lidar.STL  link1.STL  link2.STL  link3.STL  right_wheel.STL
ssmm_robot/urdf/: ssmm_robot.csv  ssmm_robot.gazebo  ssmm_robot.gv  ssmm_robot.urdf  ssmm_robot.urdf.xacro  ssmm_test.urdf
ssmm_robot_description/: CMakeLists.txt  package.xml
ssmm_robot_description/gazebo/: ssmm_robot.gazebo.xacro  ssmm_robot.materials.xacro
ssmm_robot_description/launch/: display.launch.py  gazebo.launch.py  view_robot.launch.py
ssmm_robot_description/meshes/: EE_1.stl  EE_1_1.stl  EE_1_1_1.stl  base_link.stl  cam_link1_1.stl  cam_link1_1_1.stl  cam_link1_1_1_1.stl  cam_link2_1.stl  cam_link2_1_1.stl  cam_link2_1_1_1.stl  finger_1.stl  finger_1_1.stl  finger_1_1_1.stl  left_wheel_1.stl  left_wheel_1_1.stl  lidar_1_1.stl  link1_1.stl  link1_1_1.stl  link1_1_1_1.stl  link2_1.stl  link2_1_1.stl  link2_1_1_1.stl  link3_1.stl  link3_1_1.stl  link3_1_1_1.stl  realsense_1.stl  realsense_1_1.stl  realsense_1_1_1.stl  right_wheel_1_1.stl
ssmm_robot_description/ros2_control/: ssmm_robot.ros2_control.xacro
ssmm_robot_description/urdf/: materials.xacro  ssmm_robot.gazebo  ssmm_robot.trans  ssmm_robot.urdf.xacro  ssmm_robot.xacro  ssmm_robot_description.urdf.xacro
ssmm_robot_hardware/: CMakeLists.txt  package.xml  ssmm_robot_hardware.xml
ssmm_robot_hardware/src/: diffbot.cpp  ssmm_system.cpp  (+1 more)
ssmm_robot_test_description/: CMakeLists.txt  package.xml
ssmm_teleop/: package.xml  setup.cfg  setup.py
(+15 files in other folders)
