<?xml version="1.0"?>
<package format="3">
  <name>ssmm_description</name>
  <version>0.2.0</version>
  <description>The ssmm_description package</description>

  <maintainer email="nswve@naver.com">benlee</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>realsense2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>